objects/zkmulti__MCCustoms_Item__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Allow_Record_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Record Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__CIMarksAndNumbers__c</fullName>
        <label>CI Marks and Numbers</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierType__c</fullName>
        <label>Carrier Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier__c</fullName>
        <label>Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Contents_Type__c</fullName>
        <label>Contents Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOCUMENTS_ONLY</fullName>
                    <label>Documents</label>
                </value>
                <value>
                    <fullName>NON_DOCUMENTS</fullName>
                    <label>Commodities</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__Country_of_Manufacture__c</fullName>
        <label>Country of Manufacture</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ECCN_Number__c</fullName>
        <label>ECCN Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Entry_Number__c</fullName>
        <label>Entry Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__ExportLicenseExpirationDate__c</fullName>
        <label>Export License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__ExportLicenseNumber__c</fullName>
        <label>Export License Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ExportManagementRefNumber__c</fullName>
        <label>Export Management Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ExportType__c</fullName>
        <label>Export Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Foreign</fullName>
                </value>
                <value>
                    <fullName>Foreign Military</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__Gross_Weight_Units__c</fullName>
        <label>Gross Weight Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Gross_Weight__c</fullName>
        <label>Gross Weight</label>
        <precision>10</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Handling_Unit_Quantity__c</fullName>
        <label>Handling Unit Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Handling_Unit_Type__c</fullName>
        <label>Handling Unit Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Harmonized_Code__c</fullName>
        <label>Harmonized Code</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Hazardous_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazardous Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Height__c</fullName>
        <label>Height</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__ImageUrl__c</fullName>
        <label>Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Individually_Packed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individually Packed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Is_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Item_Code__c</fullName>
        <label>Item Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__JointProduction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joint Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Length__c</fullName>
        <label>Length</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__ManufactureStateCode__c</fullName>
        <label>Manufacture State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Mod_Key__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NMFC_Class__c</fullName>
        <description>National Motor Freight Standard Freight Classification Code</description>
        <label>Freight Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NMFC_Number__c</fullName>
        <label>NMFC Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NMFC_Sub_Category__c</fullName>
        <label>NMFC Sub Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NaftaPreferenceCriterion__c</fullName>
        <label>Preference Criterion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NaftaProducerDetermination__c</fullName>
        <label>Producer Determination</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NetCostDateRangeEnd__c</fullName>
        <label>Net Cost Date Range End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__NetCostDateRangeStart__c</fullName>
        <label>Net Cost Date Range Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__NetCostMethod__c</fullName>
        <label>Net Cost Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NumberOfPieces__c</fullName>
        <label>Number of Pieces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Order_Item_Id__c</fullName>
        <label>Order Item Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__OriginalObjectId__c</fullName>
        <label>Original Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Package_Index__c</fullName>
        <label>Package Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Package_Type__c</fullName>
        <label>Package Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package</label>
        <referenceTo>zkmulti__MCPackage__c</referenceTo>
        <relationshipName>Customs_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Packed_Quantity__c</fullName>
        <label>Packed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__PartNumber__c</fullName>
        <label>Part Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Product_Barcode__c</fullName>
        <label>Product Barcode</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Product_Identifier__c</fullName>
        <label>Product Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__QuantityUnits__c</fullName>
        <label>Quantity Units</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Reference__c</fullName>
        <label>Reference</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduleBNumber__c</fullName>
        <label>Schedule B Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScheduleBUnitOfMeasurementCode__c</fullName>
        <label>Schedule B Unit Of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barrels</fullName>
                </value>
                <value>
                    <fullName>Carat</fullName>
                </value>
                <value>
                    <fullName>Content Kilogram</fullName>
                </value>
                <value>
                    <fullName>Square Centimeters</fullName>
                </value>
                <value>
                    <fullName>Content Ton</fullName>
                </value>
                <value>
                    <fullName>Curie</fullName>
                </value>
                <value>
                    <fullName>Clean Yield Kilogram</fullName>
                </value>
                <value>
                    <fullName>Dozen</fullName>
                </value>
                <value>
                    <fullName>Dozen Pieces</fullName>
                </value>
                <value>
                    <fullName>Dozen Pairs</fullName>
                </value>
                <value>
                    <fullName>Fiber Meter</fullName>
                </value>
                <value>
                    <fullName>Gross Containers</fullName>
                </value>
                <value>
                    <fullName>Gram</fullName>
                </value>
                <value>
                    <fullName>Gross</fullName>
                </value>
                <value>
                    <fullName>Hundred</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Thousand Cubic Meters</fullName>
                </value>
                <value>
                    <fullName>Kilogram Total Sugars</fullName>
                </value>
                <value>
                    <fullName>Liter</fullName>
                </value>
                <value>
                    <fullName>Meter</fullName>
                </value>
                <value>
                    <fullName>Square Meters</fullName>
                </value>
                <value>
                    <fullName>Cubic Meters</fullName>
                </value>
                <value>
                    <fullName>Millicurie</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Pieces</fullName>
                </value>
                <value>
                    <fullName>Proof Liter</fullName>
                </value>
                <value>
                    <fullName>Pack</fullName>
                </value>
                <value>
                    <fullName>Pairs</fullName>
                </value>
                <value>
                    <fullName>Running Bales</fullName>
                </value>
                <value>
                    <fullName>Square</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__SequenceNumber__c</fullName>
        <label>Package Sequence Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__SerialNumber__c</fullName>
        <description>Article reference, serial number.</description>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>zkmulti__MCShipment__c</referenceTo>
        <relationshipName>Customs_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__TermsOfTrade__c</fullName>
        <label>Terms Of Trade</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__TrackingId__c</fullName>
        <label>Package Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__UnitOfMeasurementOther__c</fullName>
        <label>Other Unit Of Measurement</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__UnitOfMeasurement__c</fullName>
        <label>Unit Of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barrel</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Bunch</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Bolt</fullName>
                </value>
                <value>
                    <fullName>Butt</fullName>
                </value>
                <value>
                    <fullName>Canister</fullName>
                </value>
                <value>
                    <fullName>Centimeter</fullName>
                </value>
                <value>
                    <fullName>Container</fullName>
                </value>
                <value>
                    <fullName>Crate</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Carton</fullName>
                </value>
                <value>
                    <fullName>Cylinder</fullName>
                </value>
                <value>
                    <fullName>Dozen</fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Envelope</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Kilograms</fullName>
                </value>
                <value>
                    <fullName>Pound</fullName>
                </value>
                <value>
                    <fullName>Pounds</fullName>
                </value>
                <value>
                    <fullName>Liter</fullName>
                </value>
                <value>
                    <fullName>Meter</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Packet</fullName>
                </value>
                <value>
                    <fullName>Pallet</fullName>
                </value>
                <value>
                    <fullName>Piece</fullName>
                </value>
                <value>
                    <fullName>Pieces</fullName>
                </value>
                <value>
                    <fullName>Proof Liters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__UnitPriceCurrency__c</fullName>
        <label>Unit Price Currency</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Value_Currency__c</fullName>
        <label>Value Currency</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Value__c</fullName>
        <label>Value</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__VehicleId__c</fullName>
        <label>Vehicle ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight_Units__c</fullName>
        <label>Weight Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight__c</fullName>
        <label>Weight</label>
        <precision>10</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Width__c</fullName>
        <label>Width</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>Nolan_Daigle_MCCustoms_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>zkmulti__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>zkmulti__Customs_Items_Data</fullName>
        <columns>NAME</columns>
        <columns>zkmulti__Carrier__c</columns>
        <columns>zkmulti__Name__c</columns>
        <columns>zkmulti__Contents_Type__c</columns>
        <columns>zkmulti__Weight__c</columns>
        <columns>zkmulti__UnitPrice__c</columns>
        <columns>zkmulti__Value__c</columns>
        <columns>zkmulti__Harmonized_Code__c</columns>
        <columns>zkmulti__Country_of_Manufacture__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zkmulti__Is_Profile__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Customs Items Data</label>
    </listViews>
    <nameField>
        <displayFormat>Product-{0000000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>